PHORONIX TEST SUITE CHANGE-LOG

Phoronix Test Suite (Git)

- pts-core: Add "libudev1:i386" to "32bit-compatibility" external dependency for Ubuntu Linux
- toggle_screensaver: Disable on OS X since there is no support for automatically disabling the OS X screensaver and causes collision with MacPorts

Phoronix Test Suite 5.0-Plavsk
12 March 2014

- pts-core: Improvements to run-random-tests
- pts-core: Support for running the HTML5 UI on Microsoft Windows
- pts-core: Rename RemoteAccessAllowed user configuration option to RemoteAccessPort
- phodevi: Improve MATE detection
- phodevi: Improve desktop environment recognition with $DESKTOP_SESSION
- phodevi: Ensure GCC's minor version number is reported

Phoronix Test Suite 5.0 Milestone 3
3 March 2014

- pts-core: Windows 8.1 support improvements
- pts-core: Add SKIP_TESTING_SUBSYSTEMS environment variable, partially based on former ONLY_TEST_TYPES
- pts-core: Add a run-random-tests command to run random tests/workloads on the system
- phodevi: Improve NVIDIA DDX version detection
- phodevi: Improve audio detection
- phodevi: Add extra fallback for trying to read Radeon DRM core and memory frequencies on recent kernels

Phoronix Test Suite 5.0 Milestone 2
17 February 2014

- pts-core: Add rename-result-file option
- pts-core: WebSocket bug-fixes
- pts-core: Other bug-fixes
- pts-core: Disable the compiler-mask by default on FreeBSD/PC-BSD due to potential test installation issues on 10.0-RELEASE
- pts-core: Split webui command into gui and start-remote-gui-server (local HTML5 GUI support) commands (remote + local HTML5 GUI support)

Phoronix Test Suite 5.0 Milestone 1
6 February 2014

- pts-core: Add web-server-launcher support
- pts-core: Support starting HHVM as a web server
- pts-core: Startup speed optimizations
- pts-core: Cleaned up code error reporting/handling
- pts-core: Add server remote access and password options to user-config.xml user configuration options